“上传网站源码到github”

--- a/css/global.css
+++ b/css/global.css
@@ -2,9 +2,9 @@
 * @Author: Marte
 * @Date:   2018-10-09 21:15:09
 * @Last Modified by:   Marte
-* @Last Modified time: 2018-10-09 21:37:26
+* @Last Modified time: 2018-10-09 21:48:51
 */
 body{
     color: white;
-    background-color: blue;
+    background-color: #8E8E8E;
 }
